alignment bug fix

--- a/src/assets/scss/components/products.scss
+++ b/src/assets/scss/components/products.scss
@@ -777,6 +777,9 @@
                     }
                 }
             }
+            .sale-rep-btn {
+                width: 106px;
+            }
         }
     }
     .products:not(.list-view) .row > div {
